--- a/Style.css
+++ b/Style.css
@@ -18,7 +18,7 @@
 
 .T-1{
     font-family: Arial, Helvetica, sans-serif; border-radius: 25px; border: 150px 200px; background-color: 
-    rgb(99, 100, 102);
+    rgb(99, 100, 102); opacity: 90%;
 }
 .h2-1{
     color: white; text-align: center;
@@ -27,12 +27,11 @@
 
 }
 .p-2{
-    font-family: Arial, Helvetica, sans-serif; color: rgb(13, 187, 120); text-shadow: 4000px;
+    font-family: Arial, Helvetica, sans-serif; color: rgb(13, 187, 120); text-shadow: 4000px; background-size: cover;
 }
 .h2-3{
     color: white; text-align: center;
 }
 .First-Form{
     text-align: center; margin-bottom: 400px; font-family:
-     Arial, Helvetica, sans-serif; font-weight: bolder;
-}
+     Arial, Helvetica, sans-serif; font-weight: bolder; }
